--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,17 @@ body{
     font-family: 'Phudu', cursive;
     font-family: 'Poppins', sans-serif;;
 }
+
+.iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.iframe-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
